--- a/kubernetes/resources/camunda.yaml
+++ b/kubernetes/resources/camunda.yaml
@@ -13,6 +13,13 @@ spec:
       - name: camunda 
         image: camunda/camunda-bpm-platform:latest
         imagePullPolicy: IfNotPresent
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "500m"
+          limits:
+            memory: "1Gi"
+            cpu: "1"
 ---
 apiVersion: v1
 kind: Service
