--- a/kubernetes/resources/wso2-esb.yaml
+++ b/kubernetes/resources/wso2-esb.yaml
@@ -13,6 +13,13 @@ spec:
       - name: wso2esb
         image: isim/wso2esb
         imagePullPolicy: IfNotPresent
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "500m"
+          limits:
+            memory: "1Gi"
+            cpu: "1"
 ---
 apiVersion: v1
 kind: Service
